--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,8 @@
     <color name="died">#33A5A5A5</color>
     <color name="refused">#33EC701C</color>
     <color name="dssIncorrect">#337f00ff</color>
+    <color name="grayLight">#efefef</color>
+    <color name="grayDark">#5e5e5e</color>
 
 
 </resources>
