--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -14,29 +14,30 @@
 
     </data>
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rsv_bg"
-        android:layoutDirection="rtl"
-        android:padding="16dp">
+        android:orientation="vertical">
 
-        <LinearLayout
+
+        <TextView
+            style="@style/HeadingTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:text="@string/Section1" />
 
-            <TextView
-                style="@style/HeadingTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/Section1" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rsv_bg">
 
             <LinearLayout
                 android:id="@+id/ll01"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -84,9 +85,9 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center"
-
                                     android:text="35019"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
                             </LinearLayout>
 
                             <LinearLayout
@@ -304,11 +305,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RS9"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RS9" />
 
                         </LinearLayout>
 
@@ -384,11 +381,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RS15"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RS15" />
 
                         </LinearLayout>
 
@@ -396,10 +389,8 @@
                             android:id="@+id/RS15"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="70"
                             android:focusable="false"
+                            android:gravity="center"
                             android:hint="DD-MM-YYYY"
                             android:textColor="@android:color/black"
                             app:dateFormat="dd-MM-yyyy"
@@ -434,24 +425,17 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RS14"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RS14" />
 
                         </LinearLayout>
 
                         <EditText
                             android:id="@+id/dobInMonths"
-                            style="@style/textInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="70"
                             android:enabled="false"
                             android:focusable="false"
+                            android:gravity="center"
                             android:hint="Months"
                             android:textColor="@android:color/black" />
 
@@ -485,11 +469,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RS16"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RS16" />
 
                         </LinearLayout>
 
@@ -500,44 +480,50 @@
 
                             <RadioButton
                                 android:id="@+id/RS16a"
-                                style="@style/radiobutton"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:text="@string/RS16a" />
 
                             <RadioButton
                                 android:id="@+id/RS16b"
-                                style="@style/radiobutton"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:text="@string/RS16b" />
 
                             <RadioButton
                                 android:id="@+id/RS16c"
-                                style="@style/radiobutton"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:text="@string/RS16c" />
 
                             <RadioButton
                                 android:id="@+id/RS16d"
-                                style="@style/radiobutton"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:text="@string/RS16d" />
 
                             <RadioButton
                                 android:id="@+id/RS16e"
-                                style="@style/radiobutton"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:text="@string/RS16e" />
 
                             <RadioButton
                                 android:id="@+id/RS1696"
-                                style="@style/radiobutton"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:text="@string/other" />
 
                             <EditText
                                 android:id="@+id/RS1696x"
-                                style="@style/textInput"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:digits="@string/ed_letterOnly"
                                 android:hint="@string/other"
                                 android:tag="RS1696"
-                                android:text='@{RS1696.checked? RS1696x.getText().toString() : ""}'
-                                android:visibility='@{RS1696.checked? View.VISIBLE : View.GONE}' />
+                                android:text='@{RS1696.checked ? RS1696x.getText().toString() : ""}'
+                                android:visibility='@{RS1696.checked ? View.VISIBLE : View.GONE}' />
+
                         </RadioGroup>
 
                     </LinearLayout>
@@ -846,45 +832,46 @@
                 <!--                </LinearLayout>-->
 
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btn_Continue"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4sp"
+                        android:layout_weight="1"
+                        android:background="@android:color/holo_green_light"
+                        android:onClick='@{() -> callback.BtnContinue()}'
+                        android:text="@string/start_interview"
+                        android:textColor="@color/white"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:visibility='@{RS16a.checked? View.VISIBLE : View.GONE}' />
+
+                    <Button
+                        android:id="@+id/btn_End"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4sp"
+                        android:layout_weight="1"
+                        android:background="@android:color/holo_red_light"
+                        android:onClick='@{() -> callback.BtnEnd()}'
+                        android:text="@string/end_interview"
+                        android:textColor="@color/white"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:visibility='@{RS16a.checked? View.GONE : View.VISIBLE}' />
+
+                </LinearLayout>
+
+
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+        </ScrollView>
 
-                <Button
-                    android:id="@+id/btn_Continue"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4sp"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_green_light"
-                    android:onClick='@{() -> callback.BtnContinue()}'
-                    android:text="@string/start_interview"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    android:visibility='@{RS16a.checked? View.VISIBLE : View.GONE}' />
-
-                <Button
-                    android:id="@+id/btn_End"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4sp"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_red_light"
-                    android:onClick='@{() -> callback.BtnEnd()}'
-                    android:text="@string/end_interview"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    android:visibility='@{RS16a.checked? View.GONE : View.VISIBLE}' />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+    </LinearLayout>
 
 </layout>
