--- a/app/src/main/res/layout/activity_form2b_pretest.xml
+++ b/app/src/main/res/layout/activity_form2b_pretest.xml
@@ -16,8 +16,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layoutDirection="ltr">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,6 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/SectionT2" />
+
 
 
                 <androidx.cardview.widget.CardView
@@ -62,21 +62,15 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/date_of_visit"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/date_of_visit" />
 
                         </LinearLayout>
 
                         <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                             android:id="@+id/RST200"
-                            style="@style/textInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:layout_marginStart="20dp"
                             android:focusable="false"
                             android:hint="DD-MM-YYYY"
                             android:textColor="@android:color/black"
@@ -86,6 +80,7 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
 
                 <!--RST201 - EditText-->
                 <androidx.cardview.widget.CardView
@@ -113,17 +108,15 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RST201"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RST201" />
 
                         </LinearLayout>
 
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RST201"
-                            style="@style/EditTextNum"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
                             android:gravity="center"
                             android:hint="##.#"
                             app:mask="##.#"
@@ -134,6 +127,7 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
 
                 <!--RST202 - EditText-->
                 <androidx.cardview.widget.CardView
@@ -161,17 +155,15 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RST202"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RST202" />
 
                         </LinearLayout>
 
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RST202"
-                            style="@style/EditTextNum"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
                             android:gravity="center"
                             android:hint="###.#"
                             app:mask="###.#"
@@ -182,6 +174,7 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
 
                 <!--RST203 - EditText-->
                 <androidx.cardview.widget.CardView
@@ -209,17 +202,15 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RST203"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RST203" />
 
                         </LinearLayout>
 
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RST203"
-                            style="@style/EditTextNum"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
                             android:hint="##.##"
                             android:gravity="center"
                             app:mask="##.##"
@@ -232,11 +223,13 @@
                 </androidx.cardview.widget.CardView>
 
 
+
                 <TextView
                     style="@style/HeadingTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/SectionT3" />
+
 
                 <!--RST301 - Radio-->
                 <androidx.cardview.widget.CardView
@@ -264,11 +257,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RST301"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RST301" />
 
                         </LinearLayout>
 
@@ -280,16 +269,16 @@
 
                             <RadioButton
                                 android:id="@+id/RST301a"
-                                style="@style/radiobutton"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:padding="10dp"
                                 android:text="@string/Eyes" />
 
                             <RadioButton
                                 android:id="@+id/RST301b"
-                                style="@style/radiobutton"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:padding="10dp"
                                 android:text="@string/Eno" />
 
                         </RadioGroup>
@@ -297,6 +286,7 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
 
                 <!--RST3AS - EditText -->
                 <androidx.cardview.widget.CardView
@@ -324,23 +314,22 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RST3AS"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RST3AS" />
 
                         </LinearLayout>
 
                         <EditText
                             android:id="@+id/RST3AS"
-                            style="@style/EditTextAlphaNumeric"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text"
                             android:hint="@string/Especify"
                             android:maxLength="20" />
 
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
 
                 <!--RST302 - EditText -->
                 <androidx.cardview.widget.CardView
@@ -368,22 +357,21 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:background="@color/white"
-                                android:padding="16dp"
-                                android:text="@string/RST302"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="22sp" />
+                                android:text="@string/RST302" />
 
                         </LinearLayout>
 
                         <EditText
                             android:id="@+id/RST302"
-                            style="@style/EditTextAlphaNumeric"
-                            android:hint="@string/Especify" />
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/Especify"
+                            android:inputType="text" />
 
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
 
                 <!-- ELSE PART AFTER TEST -->
                 <!--
